--- a/src/app/basic-components/home/home.component.html
+++ b/src/app/basic-components/home/home.component.html
@@ -6,7 +6,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="stat-widget-five">
-						<div class="stat-heading"><span style="color:black">standard Itineary Quote</span></div>
+						<div class="stat-heading"><span style="color:black">Standard Itinerary Quote</span></div>
 						<div class="stat-heading"><b>10</b><span style="color:black"> Total Quotes</span></div>
                         <div class="stat-icon">                           
                         </div>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
 				<button _ngcontent-scw-c7="" class="btn btn-info pull-right" type="button">
-							create standard Itineary Quote
+							Create Standard Itinerary Quote
 				</button>
             </div>
         </div>
@@ -98,7 +98,7 @@
 								</div>
 							</div>
                             <div class="col-lg-9 text-left dib">							
-                                <div class="stat-heading"><span style="color:black"> TBook your Hotel in Content online. No reservation costs. Great rates. Apartments. Hotels. Villas. Hostels.</span></div>
+                                <div class="stat-heading"><span style="color:black"> TBook your Hotel in Content online. No reservation costs. Great rates. Apartments. Hotels. Villas. Hostels.<br/><br/></span></div>
                             </div>
                         </div>					
                     </div>
