--- a/src/app/modules/products/book-now/book-now.component.html
+++ b/src/app/modules/products/book-now/book-now.component.html
@@ -18,9 +18,7 @@
                                   <form #bookFrm="ngForm" (ngSubmit)="quote(bookFrm.value)" novalidate="novalidate">
 
                                       <div class="row">
-                                          <div class="col-6"> 
-                                                  <label for="cc-exp" class="control-label mb-1">Availble : {{details.avaible}}</label>                                                   
-                                          </div>
+                                         
                                           <div class="col-6">
                                               <label for="cc-exp" class="control-label mb-1">Price : {{details.cost}}</label>
                                           </div>
@@ -53,7 +51,7 @@
                    <table class="table">
                           <thead>
                             <tr>
-                                <th scope="col">Persions</th> 
+                                <th scope="col">Persons</th> 
                                 <th>{{persn.person}}</th>
                             </tr>
                             <tr>
