--- a/src/app/modules/quotes/quotes-detail/quotes-detail.component.html
+++ b/src/app/modules/quotes/quotes-detail/quotes-detail.component.html
@@ -16,7 +16,7 @@
                   <div class="card-header">
                       <strong class="card-title" v-if="headerText">
                           <i class="fa fa-money"></i>
-                        Quotes Details</strong>
+                        Booking Details</strong>
                   </div>
 
                   <div class="card-body">
