--- a/src/app/modules/support/support-list/support-list.component.html
+++ b/src/app/modules/support/support-list/support-list.component.html
@@ -1,33 +1,47 @@
-<div class="card">
+
+<div *ngIf="!loader" style="text-align: center; margin-top: 200px;margin-bottom: 200px;">
+    <div class="loader">Loading...</div>
+    </div>
+
+
+
+
+<div class="card" *ngIf="loader">
   <div class="card-header">
       <strong class="card-title">Support
         <small><a routerLink="edit" class="btn btn-primary float-right mt-1">Add</a></small>
       </strong>
-  </div>
-  <div class="card-body">
-      <div class="alert alert-primary" role="alert">
-          This is a primary alert—check it out!
-      </div>
-      <div class="alert alert-secondary" role="alert">
-          This is a secondary alert—check it out!
-      </div>
-      <div class="alert alert-success" role="alert">
-          This is a success alert—check it out!
-      </div>
-      <div class="alert alert-danger" role="alert">
-          This is a danger alert—check it out!
-      </div>
-      <div class="alert alert-warning" role="alert">
-          This is a warning alert—check it out!
-      </div>
-      <div class="alert alert-info" role="alert">
-          This is a info alert—check it out!
-      </div>
-      <div class="alert alert-light" role="alert">
-          This is a light alert—check it out!
-      </div>
-      <div class="alert alert-dark" role="alert">
-          This is a dark alert—check it out!
-      </div>
-  </div>
+  </div> 
+</div>
+
+<div class="row" *ngIf="records">
+    
+        <div class="col-md-4" >
+                <div class="card">
+                    <div class="card-header">
+                        <strong class="card-title">No Tickets  </strong>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text"><b>Hi </b> Tickets not availble on your account</p> 
+                        <a class="btn btn-success " routerLink="edit">Create</a>
+                    </div>
+                </div>
+            </div>
+    </div>
+
+<div class="row" *ngIf="!records">
+    
+    <div class="col-md-4" *ngFor="let ticket of tickets">
+            <div class="card">
+                <div class="card-header">
+                    <strong class="card-title">{{ticket.title}} <small><span class="badge badge-success float-right mt-1">{{ticket.status}}</span></small></strong>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><b>Priority : </b> {{ticket.priority}}</p>
+                    <p class="card-text"><b>Severity : </b> {{ticket.severity}}</p>
+                    <p class="card-text"><b>Date : </b> {{ticket.createdtime}}</p>
+                    <a class="btn btn-success " routerLink="/support/detail/{{ticket.ticketid}}">Read More</a>
+                </div>
+            </div>
+        </div>
 </div>
