--- a/src/app/modules/quotes/fixedquote/fixedquote.component.html
+++ b/src/app/modules/quotes/fixedquote/fixedquote.component.html
@@ -39,11 +39,11 @@
             <mat-datepicker-toggle [for]="dateoftravel" matSuffix></mat-datepicker-toggle>
             <mat-datepicker #dateoftravel ></mat-datepicker>
           </mat-form-field>-->
-          &nbsp;&nbsp; <input type="date" name="dateoftravel" />
+          &nbsp;&nbsp; <input type="date" id="dateoftravel" value="22-09-2019" name="dateoftravel" />
         </span>
         <span class="col-lg-4">
           <label class=" form-control-label">No of Adults</label>
-          &nbsp;&nbsp;  <input type="text" name="noofadults" />
+          &nbsp;&nbsp;  <input type="text" id="noofadults" value="4" name="noofadults" />
           </span>
           <span class="col-lg-4">
             <label class=" form-control-label">  No of Childs</label>
