--- a/src/app/modules/invoices/invoice-list/invoice-list.component.html
+++ b/src/app/modules/invoices/invoice-list/invoice-list.component.html
@@ -1,10 +1,16 @@
-<div class="col-lg-12">
+
+<div *ngIf="loder" style="text-align: center; margin-top: 200px;margin-bottom: 200px;">
+    <div class="loader">Loading...</div>
+   </div>
+
+
+<div class="col-lg-12" *ngIf="!loder" >
   <div class="card">
       <div class="card-header">
           <strong class="card-title">Invoice List</strong>
       </div>
       <div class="card-body">
-          <table class="table table-striped">
+          <table class="table table-striped" *ngIf="dataType">
               <thead>
                   <tr>
                       <th scope="col">#</th>
