--- a/src/app/modules/support/support-edit/support-edit.component.html
+++ b/src/app/modules/support/support-edit/support-edit.component.html
@@ -14,17 +14,17 @@
         <form #ticket="ngForm" (ngSubmit)="ticket.valid && ticketForm(ticket.value)"  novalidate>
           <!-- {{ticket.value | json}} -->
           <div class="row">
-            <div class="form-group col-md-12">
+            <div class="form-group col-md-6">
               <mat-form-field appearance="outline" class="example-full-width">
                   <mat-label>Title</mat-label>
-                  <input type="text" name="title" ngModel class="example-full-width" required  matInput>
+                  <input type="text" name="title" [(ngModel)]="tickets.title" class="example-full-width" required  matInput>
               </mat-form-field>
             </div>
 
             <div class="form-group col-md-6">
                 <mat-form-field appearance="outline" class="example-full-width">
                     <mat-label>Priority</mat-label>
-                    <mat-select ngModel required name="priority"> 
+                    <mat-select required name="priority"  [(ngModel)]="tickets.priority" > 
                       <mat-option value="Low"  >Low</mat-option>
                       <mat-option value="Normal">Normal</mat-option>
                       <mat-option value="High">High</mat-option>
@@ -35,7 +35,7 @@
               <div class="form-group col-md-6">
                   <mat-form-field appearance="outline" class="example-full-width">
                       <mat-label>Status</mat-label>
-                      <mat-select ngModel required name="status"> 
+                      <mat-select ngModel required name="status" [(ngModel)]="tickets.status"> 
                         <mat-option value="Open"  >Open</mat-option>
                         <mat-option value="In Progress">In Progress</mat-option>
                         <mat-option value="Wait For Response">Wait For Response</mat-option>
@@ -48,7 +48,7 @@
                 <div class="form-group col-md-6">
                     <mat-form-field appearance="outline" class="example-full-width">
                         <mat-label>Product Name</mat-label>
-                        <input type="text" name="product_name" ngModel matInput [matAutocomplete]="auto"  >
+                        <input type="text" name="product_name" [(ngModel)]="tickets.product_name" matInput [matAutocomplete]="auto"  >
                         <mat-autocomplete #auto="matAutocomplete">
                             <mat-option *ngFor="let option of products" [value]="option.record" >
                                 {{option.name}}
@@ -61,7 +61,7 @@
                   <div class="form-group col-md-6">
                       <mat-form-field appearance="outline" class="example-full-width">
                           <mat-label>Severity</mat-label>
-                          <mat-select ngModel  name="severity"> 
+                          <mat-select [(ngModel)]="tickets.severity"  name="severity"> 
                             <mat-option value="Minor"  >Minor</mat-option>
                             <mat-option value="Major">Major</mat-option>
                             <mat-option value="Feature">Feature</mat-option>
@@ -71,7 +71,7 @@
                     </div>
 
 
-                    <div class="form-group col-md-6">
+                    <!-- <div class="form-group col-md-6">
                         <mat-form-field appearance="outline" class="example-full-width">
                             <mat-label>Service Contract</mat-label>
                             <input type="text" name="service_contract" ngModel matInput [matAutocomplete]="autoser"  >
@@ -81,12 +81,12 @@
                                 </mat-option>
                             </mat-autocomplete>
                         </mat-form-field>
-                      </div>
+                      </div> -->
     
                       <div class="form-group col-md-6">
                           <mat-form-field appearance="outline" class="example-full-width">
                               <mat-label>Category</mat-label>
-                              <mat-select ngModel  name="category"> 
+                              <mat-select ngModel  name="category" [(ngModel)]="tickets.category"> 
                                 <mat-option value="Big Problem"  >Big Problem</mat-option>
                                 <mat-option value="Small Problem">Small Problem</mat-option>
                                 <mat-option value="Other Problem">Other Problem</mat-option> 
@@ -98,7 +98,7 @@
                         <div class="form-group col-md-12 ">
                             <mat-form-field appearance="outline" class="example-full-width">
                                 <mat-label>Description</mat-label>
-                                <textarea name="description" matInput ngModel  ></textarea>
+                                <textarea name="description" matInput [(ngModel)]="tickets.description"  ></textarea>
                               </mat-form-field>
                           </div>
              <div class="form-group col-md-12 ">
