--- a/src/app/modules/support/support-detail/support-detail.component.html
+++ b/src/app/modules/support/support-detail/support-detail.component.html
@@ -47,7 +47,7 @@
                                         <app-comments [ticket_data]="ticket_id"></app-comments> 
                                 </mat-tab>
                                 <mat-tab label="Documments"> <br>
-                                    No more records 
+                                    <app-documents [ticket_data]="ticket_id"></app-documents> 
                                 </mat-tab>
                         </mat-tab-group>
                         </div>
