--- a/src/app/modules/support/documents/documents.component.html
+++ b/src/app/modules/support/documents/documents.component.html
@@ -1,8 +1,8 @@
 
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
+    <!-- <div class="form-group">
       <input type="text" formControlName="name" class="form-control" placeholder="Name">
-    </div>
+    </div> -->
     <div class="form-group">
       <input type="file" name="profile" (change)="onSelectedFile($event)" />
     </div>
@@ -21,7 +21,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let docs of documents; index as i">
+    <tr *ngFor="let docs of documents; index as i"  >
       <th scope="row">{{i+1}}</th>
       <td><img src="{{usSer.path}}{{docs.file_path}}" alt="{{docs.filename}}" style="height: 50px;"></td>
       <td>{{docs.filename}}</td>
