--- a/src/app/modules/invoices/invoice-detail/invoice-detail.component.html
+++ b/src/app/modules/invoices/invoice-detail/invoice-detail.component.html
@@ -5,7 +5,7 @@
 
 
 
-<div class="animated fadeIn" *ngIf="!loder">
+<div class="animated fadeIn" *ngIf="!loder && invoice">
 
 <div class="ui-typography">
     <div class="row">
