--- a/src/app/basic-components/header/header.component.html
+++ b/src/app/basic-components/header/header.component.html
@@ -4,7 +4,9 @@
             <div class="navbar-header">
                 <!-- <a class="navbar-brand" routerLink="/"><img src="assets/images/logo.png" alt="Logo"></a> -->
                 <!-- <a class="navbar-brand hidden" routerLink="/"><img src="assets/images/logo2.png" alt="Logo"></a> -->
-                <a class="navbar-brand" routerLink="/">TURTLE</a>
+                <a class="navbar-brand" routerLink="/">
+                <img src="assets/images/gtx.png"/>
+                </a>
                 <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
             </div>
         </div>
