--- a/src/app/basic-components/login/login.component.html
+++ b/src/app/basic-components/login/login.component.html
@@ -33,10 +33,11 @@
                 </div>           
                 <div class="col-md-4 col-lg-4">
                      <div class="login-body">
+                         <br/><br/>
                     <div class="login-logo">
                         <a href="index.html">
                             <!-- <img class="align-content" src="images/logo.png" alt=""> -->
-                            <h3>TURTLE</h3>
+                            <img class="align-content" src="assets/images/gtx.png"/>
                         </a>
                     </div>
                     <div class="login-form">
